examples/networkpolicy-tests/app1/deploy/network-policies/scenario3/egress-firewall-allow-domains.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
spec:
  egress:
  - to:
      dnsName: amazonaws.com
    type: Allow
  - to:
      dnsName: redhat.com
    type: Allow
  - to:
      dnsName: google.com
    type: Allow
  - to: 
      cidrSelector: 0.0.0.0/0
    type: Deny
